--- a/packages/create-electron/template/react/package.json
+++ b/packages/create-electron/template/react/package.json
@@ -18,21 +18,20 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^1.0.2"
+    "@electron-toolkit/utils": "^2.0.0"
   },
   "devDependencies": {
-    "@electron/notarize": "^1.2.3",
-    "@vitejs/plugin-react": "^4.0.3",
-    "electron": "^24.6.2",
-    "electron-builder": "^23.6.0",
-    "electron-vite": "^1.0.25",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.8",
+    "@electron-toolkit/eslint-config": "^1.0.1",
+    "@electron-toolkit/eslint-config-prettier": "^1.0.1",
+    "@vitejs/plugin-react": "^4.0.4",
+    "electron": "^25.6.0",
+    "electron-builder": "^24.6.3",
+    "electron-vite": "^1.0.27",
+    "eslint": "^8.47.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^4.4.2"
+    "vite": "^4.4.9"
   }
 }
