--- a/packages/create-electron/template/solid/electron-builder.yml
+++ b/packages/create-electron/template/solid/electron-builder.yml
@@ -10,7 +10,6 @@ files:
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
 asarUnpack:
   - 'resources/**'
-afterSign: build/notarize.js
 win:
   executableName: app
 nsis:
@@ -25,6 +24,7 @@ mac:
     - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
     - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
     - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
+  notarize: false
 dmg:
   artifactName: ${name}-${version}.${ext}
 linux:
