--- a/packages/create-electron/template/svelte-ts/package.json
+++ b/packages/create-electron/template/svelte-ts/package.json
@@ -6,7 +6,7 @@
   "author": "example.com",
   "homepage": "https://www.electronjs.org",
   "scripts": {
-    "format": "prettier --write .",
+    "format": "prettier --plugin prettier-plugin-svelte --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "svelte-check": "svelte-check --tsconfig ./tsconfig.json",
@@ -21,28 +21,25 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^1.0.2"
+    "@electron-toolkit/utils": "^2.0.0"
   },
   "devDependencies": {
+    "@electron-toolkit/eslint-config-prettier": "^1.0.1",
+    "@electron-toolkit/eslint-config-ts": "^1.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron/notarize": "^1.2.3",
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "@types/node": "^18.16.19",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "electron": "^24.6.2",
-    "electron-builder": "^23.6.0",
-    "electron-vite": "^1.0.25",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.8",
-    "svelte": "^3.59.2",
-    "svelte-check": "^3.4.6",
-    "svelte-preprocess": "^5.0.4",
-    "tslib": "^2.6.0",
+    "@sveltejs/vite-plugin-svelte": "^2.4.5",
+    "@types/node": "^18.17.5",
+    "electron": "^25.6.0",
+    "electron-builder": "^24.6.3",
+    "electron-vite": "^1.0.27",
+    "eslint": "^8.47.0",
+    "eslint-plugin-svelte": "^2.32.4",
+    "prettier": "^3.0.2",
+    "prettier-plugin-svelte": "^3.0.3",
+    "svelte": "^4.2.0",
+    "svelte-check": "^3.5.0",
+    "tslib": "^2.6.2",
     "typescript": "^5.1.6",
-    "vite": "^4.4.2"
+    "vite": "^4.4.9"
   }
 }
