--- a/packages/create-electron/template/svelte/package.json
+++ b/packages/create-electron/template/svelte/package.json
@@ -6,7 +6,7 @@
   "author": "example.com",
   "homepage": "https://www.electronjs.org",
   "scripts": {
-    "format": "prettier --write .",
+    "format": "prettier --plugin prettier-plugin-svelte --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
@@ -18,20 +18,20 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^1.0.2"
+    "@electron-toolkit/utils": "^2.0.0"
   },
   "devDependencies": {
-    "@electron/notarize": "^1.2.3",
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "electron": "^24.6.2",
-    "electron-builder": "^23.6.0",
-    "electron-vite": "^1.0.25",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.8",
-    "svelte": "^3.59.2",
-    "vite": "^4.4.2"
+    "@electron-toolkit/eslint-config": "^1.0.1",
+    "@electron-toolkit/eslint-config-prettier": "^1.0.1",
+    "@sveltejs/vite-plugin-svelte": "^2.4.5",
+    "electron": "^25.6.0",
+    "electron-builder": "^24.6.3",
+    "electron-vite": "^1.0.27",
+    "eslint": "^8.47.0",
+    "eslint-plugin-svelte": "^2.32.4",
+    "prettier": "^3.0.2",
+    "prettier-plugin-svelte": "^3.0.3",
+    "svelte": "^4.2.0",
+    "vite": "^4.4.9"
   }
 }
