--- a/packages/create-node-lib/template/tsup/package.json
+++ b/packages/create-node-lib/template/tsup/package.json
@@ -7,6 +7,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
@@ -16,21 +17,24 @@
   ],
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint --ext .ts src/**",
+    "lint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts src/**",
     "typecheck": "tsc --noEmit",
+    "dev": "esno -r dotenv/config src/index.ts",
     "build": "npm run lint && tsup src/index.ts --dts --format cjs,esm",
     "test": "vitest run"
   },
   "devDependencies": {
-    "@types/node": "^16.18.14",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.4",
-    "tsup": "^6.6.3",
-    "typescript": "^4.9.5",
-    "vitest": "^0.29.2"
+    "@types/node": "^18.18.13",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "esno": "^4.0.0",
+    "prettier": "^3.1.0",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.2",
+    "vitest": "^0.34.6"
   }
 }
