--- a/packages/create-node-lib/playground/rollup-vitest/package.json
+++ b/packages/create-node-lib/playground/rollup-vitest/package.json
@@ -19,23 +19,23 @@
     "format": "prettier --write .",
     "lint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts src/**",
     "typecheck": "tsc --noEmit",
-    "build": "npm run lint && rollup -c rollup.config.mjs",
+    "build": "npm run lint && rollup -c rollup.config.ts --configPlugin typescript",
     "test": "vitest run"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/node": "^18.18.13",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.1.0",
-    "rollup": "^4.6.0",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^18.19.6",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.1.1",
+    "rollup": "^4.9.4",
     "rollup-plugin-dts": "^6.1.0",
-    "typescript": "^5.3.2",
-    "vitest": "^0.34.6"
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.3"
   }
 }
