--- a/packages/create-electron/template/vue-ts/package.json
+++ b/packages/create-electron/template/vue-ts/package.json
@@ -41,6 +41,7 @@
     "prettier": "^3.2.4",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
+    "vite-plugin-vue-devtools": "^7.1.3",
     "vue": "^3.4.15",
     "vue-tsc": "^1.8.27"
   }
