--- a/packages/create-node-lib/playground/rollup-vitest/package.json
+++ b/packages/create-node-lib/playground/rollup-vitest/package.json
@@ -2,6 +2,7 @@
   "name": "rollup-vitest",
   "version": "1.0.0",
   "description": "A Node.js library starter",
+  "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -17,26 +18,27 @@
   ],
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts src/**",
+    "lint": "eslint --cache .",
     "typecheck": "tsc --noEmit",
     "build": "npm run lint && rollup -c rollup.config.ts --configPlugin typescript",
     "test": "vitest run"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^18.19.39",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "eslint": "^8.57.0",
+    "@eslint/js": "^9.17.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/node": "^22.10.7",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
-    "rollup": "^4.18.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "rollup": "^4.31.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-rm": "^1.0.2",
-    "typescript": "^5.5.2",
-    "vitest": "^1.6.0"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0",
+    "vitest": "^3.0.3"
   }
 }
