--- a/packages/create-node-lib/playground/tsup/package.json
+++ b/packages/create-node-lib/playground/tsup/package.json
@@ -2,6 +2,7 @@
   "name": "tsup",
   "version": "1.0.0",
   "description": "A Node.js library starter",
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -17,19 +18,20 @@
   ],
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts src/**",
+    "lint": "eslint --cache .",
     "typecheck": "tsc --noEmit",
     "build": "npm run lint && tsup src/index.ts --dts --format cjs,esm"
   },
   "devDependencies": {
-    "@types/node": "^18.19.39",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "eslint": "^8.57.0",
+    "@eslint/js": "^9.17.0",
+    "@types/node": "^22.10.7",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
-    "tsup": "^8.1.0",
-    "typescript": "^5.5.2"
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0"
   }
 }
