--- a/packages/create-node-lib/playground/unbuild-tsx/package.json
+++ b/packages/create-node-lib/playground/unbuild-tsx/package.json
@@ -2,6 +2,7 @@
   "name": "unbuild-tsx",
   "version": "1.0.0",
   "description": "A Node.js library starter",
+  "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -17,22 +18,23 @@
   ],
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts src/**",
+    "lint": "eslint --cache .",
     "typecheck": "tsc --noEmit",
     "dev": "esno -r dotenv/config src/index.ts",
     "build": "npm run lint && unbuild"
   },
   "devDependencies": {
-    "@types/node": "^18.19.39",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
+    "@eslint/js": "^9.17.0",
+    "@types/node": "^22.10.7",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "esno": "^4.7.0",
-    "prettier": "^3.3.2",
-    "typescript": "^5.5.2",
-    "unbuild": "^2.0.0"
+    "eslint-plugin-prettier": "^5.2.3",
+    "esno": "^4.8.0",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0",
+    "unbuild": "^3.3.1"
   }
 }
