--- a/packages/create-electron/template/vue-ts/package.json
+++ b/packages/create-electron/template/vue-ts/package.json
@@ -34,11 +34,12 @@
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
     "eslint": "^9.24.0",
-    "eslint-plugin-vue": "^9.33.0",
+    "eslint-plugin-vue": "^10.0.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
     "vite": "^6.2.6",
     "vue": "^3.5.13",
+    "vue-eslint-parser": "^10.1.3",
     "vue-tsc": "^2.2.8"
   }
 }
