--- a/packages/create-electron/template/vue/package.json
+++ b/packages/create-electron/template/vue/package.json
@@ -29,9 +29,10 @@
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
     "eslint": "^9.24.0",
-    "eslint-plugin-vue": "^9.33.0",
+    "eslint-plugin-vue": "^10.0.0",
     "prettier": "^3.5.3",
     "vite": "^6.2.6",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-eslint-parser": "^10.1.3"
   }
 }
