--- a/packages/create-electron/template/svelte/electron-builder.yml
+++ b/packages/create-electron/template/svelte/electron-builder.yml
@@ -6,7 +6,8 @@ files:
   - '!**/.vscode/*'
   - '!src/*'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
-  - '!{.eslintcache,eslint.config.mjs,.prettierignore,.prettierrc.yaml,svelte.config.mjs,dev-app-update.yml,CHANGELOG.md,README.md}'
+  - '!svelte.config.mjs'
+  - '!{.eslintcache,eslint.config.mjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
 asarUnpack:
   - 'resources/**'
