--- a/packages/create-monorepo/playground/monorepo/package.json
+++ b/packages/create-monorepo/playground/monorepo/package.json
@@ -11,19 +11,20 @@
     "build:foo": "pnpm run -C packages/foo build"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^18.19.39",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
-    "rollup": "^4.18.0",
-    "rollup-plugin-dts": "^6.1.1",
+    "@eslint/js": "^9.24.0",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/node": "^22.14.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "rollup": "^4.40.0",
+    "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-rm": "^1.0.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   }
 }
