--- a/packages/create-node-lib/template/rollup/package.json
+++ b/packages/create-node-lib/template/rollup/package.json
@@ -20,7 +20,7 @@
     "format": "prettier --write .",
     "lint": "eslint --cache .",
     "typecheck": "tsc --noEmit",
-    "dev": "esno -r dotenv/config src/index.ts",
+    "dev": "tsx --env-file=.env src/index.ts",
     "build": "npm run lint && rollup -c rollup.config.ts --configPlugin typescript",
     "test": "vitest run"
   },
@@ -30,16 +30,15 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.14.1",
-    "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
-    "esno": "^4.8.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "rollup": "^4.40.0",
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-rm": "^1.0.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1",
     "vitest": "^3.1.1"
